# sid

./: .gitignore  README.md  package-lock.json  pyproject.toml
src/sid/: adjust_resolution.py  fetch_image.py  image_downloading.py  main.py  prefs.py
src/sid/utils/: updateAppleToken.js
