[project]
name = "sid"
version = "0.0.1"
authors = [
  { name="Artur Shevtsov", email="artorius.ua@gmail.com" },
]
description = "sid: satelite imagery downloader"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/artoriusss/sid"
Issues = "https://github.com/artoriusss/sid/issues"